<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">attaBase</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_title_settings">Settings</string>
    <string name="title_activity_main">attaBase</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_show_all_entries">attaBase Initial Import</string>
    <string name="importing">We are performing the initial import of the base data. This may take several minutes, depending on your phone (there are approximately 15k locations to import). This only needs to be performed once.</string>
    <string name="bases">Bases Imported:</string>
    <string name="locations">Locations Imported: </string>
    <string name="zero">0</string>
    <string name="initial_import_completed">Initial Import Completed</string>
    <string name="start_screen_uninitialized">We need to perform an initial import. Tap &quot;Continue&quot; below to import the DoD data.</string>
    <string name="button_import">Import</string>
    <string name="button_continue">Continue</string>
    <string name="import_completed_message">Initial import completed. Please continue.</string>
    <string name="title_base_detail">Base Detail</string>
    <string name="title_base_list">Bases</string>
    <string name="title_activity_activity_base_viewer">ActivityBaseViewer</string>
    <string name="title_activity_activity_home"></string>
    <string name="title_activity_activity_wizard">ActivityWizard</string>
    <string name="title_activity_activity_action_bar">ActivityActionBar</string>
    <string name="home_base">Home Base</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="browse_all_locations">Browse All Locations</string>
    <string name="welcome">Welcome to attaBase!</string>
    <string name="attabase_import">attaBase Import</string>
    <string name="wizard">attaBase Wizard</string>
    <string name="select_service">Select a default service</string>
    <string name="wizard_text_1">Selecting a default service will allow attaBase to tailor your experience. Don\'t worry, you can still browse all services with a default service selected.</string>
    <string name="wizard_1">attaBase Wizard: Step 1</string>
    <string name="wizard_2">attaBase Wizard: Step 2</string>
    <string name="select_base">Select a default base</string>
    <string name="wizard_text_2">Select a base to show when you start attaBase. You may still browse all other bases after setting your default base.</string>
    <string name="wizard_3">attaBase Wizard: Completed</string>
    <string name="wizard_finished">You\'re finished!</string>
    <string name="wizard_text_3">You may now enjoy using attaBase. You may change your home base or service by browsing and selecting the \"Set default\" option in the toolbar.</string>
    <string name="filter_hint">Type here to filter&#8230;</string>
    <string name="fax">Fax: </string>
    <string name="dsn">"DSN: "</string>
    <string name="dsn_fax">"DSN Fax: "</string>
    <string name="menu_title_feedback">Feedback</string>
    <string name="select_service_query_title">Select defaults?</string>
    <string name="noBaseText">No base has been set. To set a base, click the flag button when browsing.</string>
    <string name="button_home_description">Home Button</string>
    <string name="image_bookmark">Bookmark Icon</string>
    <string name="button_compass_description">Compass Button</string>
    <string name="button_phone_description">Phone Button</string>
    <string name="button_maps_description">Maps Button</string>
    <string name="pub_id">a150e641291898c</string>
    <string name="cd_right_arrow">right arrow</string>
    <string name="cd_service_icon">service icon</string>
    <string name="ad_alert_dialog">If you find attaBase useful, please consider donating. Even $1 helps the developer continue improving this app. Click &quot;OK&quot; to donate or &quot;Cancel&quot; to donate later.</string>
    <string name="ad_alert_dialog_title">Consider Donating</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="menu_donate_title">Donate</string>

</resources>