<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adView"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                style="@style/HeaderLarge"
                android:text="@string/attabase_import"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/old_glory_blue"
                android:orientation="horizontal" >
            </LinearLayout>

            <ProgressBar
                android:id="@+id/importProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_margin="20dp"
                android:fadingEdge="horizontal"
                android:fadingEdgeLength="10dp"
                android:indeterminate="true"
                android:indeterminateDrawable="@android:drawable/progress_indeterminate_horizontal"
                android:maxHeight="20dip"
                android:minHeight="20dip"
                android:progressDrawable="@android:drawable/progress_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/old_glory_blue"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:showDividers="middle" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/bases"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.68"
                        android:gravity="right"
                        android:text="@string/zero"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginTop="10dp" >

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/locations"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.68"
                        android:gravity="right"
                        android:text="@string/zero"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/importMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/importing"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:context=".ShowAllEntries" />

            <RelativeLayout
                style="@style/BottomRelativeLayout"
                android:layout_width="match_parent" >

                <Button
                    android:id="@+id/importContinueButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="53dp"
                    android:onClick="leaveImport"
                    android:text="@string/button_continue"
                    android:visibility="invisible" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:testDevices="TEST_EMULATOR, D70A6F2CF0D1D138E38C755BA0CD8022"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/pub_id"
        ads:loadAdOnCreate="true" />

</RelativeLayout>