<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:text="@string/app_name"
            style="@style/HeaderLarge"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/old_glory_blue"
            android:orientation="horizontal" >

        </LinearLayout>

        <LinearLayout
            android:id="@+id/addressBlockSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:visibility="visible" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:onClick="goToBase" >

                <ImageView
                    android:id="@+id/baseImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/button_home_description"
                    android:src="@drawable/ic_menu_home" />

                <TextView
                    android:id="@+id/baseName"
                    style="@style/LocationItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_base"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/noBaseText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/noBaseText"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/image_bookmark"
                    android:gravity="center_vertical"
                    android:src="@drawable/ic_menu_myplaces" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/addressGroup"
                style="@style/LocationGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goToMap"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView3"
                    style="@style/HeaderMedium"
                    android:text="@string/address" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical" >

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/button_maps_description"
                        android:src="@drawable/ic_menu_directions" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/address1"
                            style="@style/LocationItem"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                        <TextView
                            android:id="@+id/address2"
                            style="@style/LocationItem"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                        <TextView
                            android:id="@+id/address3"
                            style="@style/LocationItem"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" >

                            <TextView
                                android:id="@+id/city"
                                style="@style/LocationItem"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall" />

                            <TextView
                                android:id="@+id/state"
                                style="@style/LocationItem"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall" />

                            <TextView
                                android:id="@+id/zip"
                                style="@style/LocationItem"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/country"
                            style="@style/LocationItem"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/phoneGroup"
                style="@style/LocationGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:onClick="goToDialer" >

                <TextView
                    android:id="@+id/textView5"
                    style="@style/HeaderMedium"
                    android:text="@string/phone"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical" >

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/button_phone_description"
                        android:src="@drawable/ic_menu_call" />

                    <TextView
                        android:id="@+id/phone"
                        style="@style/LocationItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/websiteGroup"
                style="@style/LocationGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:onClick="goToWebsite" >

                <TextView
                    android:id="@+id/TextView02"
					style="@style/HeaderMedium"
                    android:text="@string/website" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical" >

                    <ImageView
                        android:id="@+id/ImageView01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/button_compass_description"
                        android:src="@drawable/ic_menu_compass" />

                    <TextView
                        android:id="@+id/website"
                        style="@style/LocationItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            style="@style/BottomRelativeLayout"
            android:layout_width="match_parent" >

            <Button
                android:id="@+id/button1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="buttonBrowse"
                android:text="@string/browse_all_locations" />
        </RelativeLayout>

    </LinearLayout>
 </ScrollView>
</LinearLayout> 
